scrollbar fix

--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ header {
     padding: 5px;
 }
 main {
-    height: 100vh;
+    height: 98vh;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
